developed Spawner class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(
     src/pingus_world_tour.cpp
     src/pingus_level.cpp
     src/play_level.cpp
+    src/spawner.cpp
     src/level_select.cpp
     src/json_loading_test.cpp
 )
